--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,12 @@
     "background":{
         "scripts":["background.js"]
     },
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+    
+    "icons": { 
+        "16": "icons\/logo2.jpg",
+        "48": "icons\/logo2.jpg",
+        "128": "icons\/logo2.jpg"
+    }
 
 }
