--- a/manifest.json
+++ b/manifest.json
@@ -22,11 +22,10 @@
         "scripts":["background.js"]
     },
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-    
     "icons": { 
-        "16": "icons\/logo2.jpg",
-        "48": "icons\/logo2.jpg",
-        "128": "icons\/logo2.jpg"
+        "16": "icons\/logo2_16.png",
+        "48": "icons\/logo2_48.png",
+        "128": "icons\/logo2_128.png"
     }
 
 }
