--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     ],
 
     "browser_action":{
-        "default_popup":"vue_home.html",
+        "default_popup":"home.html",
         "default_title":"Hashboard!"
     },
     "permissions": [
