--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config app.config.js"
+    "build": "webpack --config app2.config.js",
+    "build-zip": "node buildZip.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,14 @@
   },
   "homepage": "https://github.com/amogh94/hashboard#readme",
   "devDependencies": {
+    "archiver": "^4.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
+    "ejs": "^3.1.3",
+    "fs": "0.0.1-security",
     "mini-css-extract-plugin": "^0.9.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.2",
