--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config app2.config.js",
+    "build": "webpack --config app.config.js",
     "build-zip": "node buildZip.js"
   },
   "repository": {
