--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config app.config.js",
+    "watch:dev": "webpack --watch --config app.config.js",
     "build-zip": "node buildZip.js"
   },
   "repository": {
