--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Hashboard",
     "version": "1.0.0",
     "manifest_version": 2,
-    "description": "\"Hashboard\" is a simple extension to store short texts (like URLs, names, or anything else) for quick reference. The primary intention is to make it easy to copy text to your clipboard, without leaving the current tab. You can also add, edit, copy, delete, reorder and download your list.",
+    "description": "An extension to store a list of short texts, so that you can copy frequent texts to clipboard without leaving the current tab.",
     "browser_action": {
         "default_popup": "home.html",
         "default_title": "Hashboard!"
